@@ -47,19 +47,21 @@ public class KeystoreInitializer {
      * Generate the keystore.p12 file if it doesn't exist
      */
     private static void initializeKeystore() throws Exception {
-
-        Path resourcesPath = Paths.get("src", "main", "resources");
+        // Get current working directory
+        String currentDir = System.getProperty("user.dir");
+        Path resourcesPath = Paths.get(currentDir, "src", "main", "resources");
         Path keystorePath = resourcesPath.resolve("keystore.p12");
-
+        
+        // Check if keystore already exists
         if (Files.exists(keystorePath)) {
             System.out.println("Keystore already exists at: " + keystorePath.toAbsolutePath());
-
             ensureKeystoreInClasspath(keystorePath);
             return;
         }
         
         System.out.println("Keystore not found, generating a new one");
 
+        // Create resources directory if it doesn't exist
         if (!Files.exists(resourcesPath)) {
             Files.createDirectories(resourcesPath);
             System.out.println("Created resources directory at: " + resourcesPath.toAbsolutePath());
@@ -67,14 +69,25 @@ public class KeystoreInitializer {
         
         System.out.println("Generating new keystore at: " + keystorePath.toAbsolutePath());
 
-        String command = String.format(
-                "keytool -genkeypair -alias %s -keyalg RSA -keysize 2048 -storetype PKCS12 " +
-                "-keystore \"%s\" -validity 3650 -storepass %s -keypass %s " +
-                "-dname \"CN=localhost, OU=AutoCarCare, O=AutoCarCare, L=City, ST=State, C=US\" " +
-                "-noprompt", 
-                KEY_ALIAS, keystorePath.toAbsolutePath(), KEYSTORE_PASSWORD, KEYSTORE_PASSWORD);
+        // Build command as array to avoid issues with spaces and special characters
+        String[] command = {
+            "keytool", 
+            "-genkeypair", 
+            "-alias", KEY_ALIAS, 
+            "-keyalg", "RSA", 
+            "-keysize", "2048", 
+            "-storetype", "PKCS12", 
+            "-keystore", keystorePath.toString(), 
+            "-validity", "3650", 
+            "-storepass", KEYSTORE_PASSWORD, 
+            "-keypass", KEYSTORE_PASSWORD, 
+            "-dname", "CN=localhost,OU=AutoCarCare,O=AutoCarCare,L=City,ST=State,C=US",
+            "-noprompt"
+        };
         
-        Process process = Runtime.getRuntime().exec(command);
+        ProcessBuilder processBuilder = new ProcessBuilder(command);
+        Process process = processBuilder.start();
+        
         int exitCode = process.waitFor();
         
         if (exitCode == 0) {
